# ROXApps

Android/RMRolling/: .project  AndroidManifest.xml
Android/RQHelper/: .project  AndroidManifest.xml
Apps/: .DirIcon  AppRun  AppletRun  hal_if.py
Apps/ADSLStats/: AppRun  AppletRun  sitecom.py  stats.py  usage.py
Apps/Album/: AppInfo.xml  AppRun  Options.xml  localID3.py
Apps/AppFactory/: AppFactory.xml  AppIcon.xpm  AppInfo.xml  AppRun  Options.xml  libdir  promptArgs.py
Apps/AppFactory/src/: .cvsignore  Makefile.in  config.h.in  configure  configure.in  main.c
Apps/AppFactory/src/po/: en.po  es.po  extopts.py  make-mo  update-po
Apps/CDROM/: AppIcon.xpm  AppInfo.xml  AppMenu  AppRun
Apps/CheckMail/: .DirIcon  AppInfo.xml  AppRun  finger.py  status_icon.py
Apps/Clock/: .DirIcon  AppIcon.xpm  AppInfo.xml  AppRun  Clock-src.xml  Clock.xml  Options.xml  rox_run
Apps/Clock/src/: .cvsignore  CMakeLists.txt  Makefile.in  alarm.c  alarm.h  choices.c  choices.h  clock.c  config.h.in  configure  configure.in  extra.h  infowin.c  rox-clib.m4
Apps/Clock/src/po/: en.po  es.po  extopts.py  make-mo  update-po
Apps/Depend/: .DirIcon  AppInfo.xml  AppRun  DepWin.py  appinfo.py  depend.py  main.py
Apps/Desktop2App/: AppInfo.xml  AppRun  DesktopFile.py  gui.py
Apps/Diff/: AppIcon.xpm  AppInfo.xml  AppRun  Diff.xml  Options.xml  libdir
Apps/Diff/src/: .cvsignore  Makefile.in  config.cache  config.h.in  configure.in  dist  main.c
Apps/Diff/src/po/: en.po  es.po  make-mo
Apps/DiskMan/: AppletRun  Options.xml  disk_manager.py  disks.py  hal_if.py  manager.py  udisks2_if.py
Apps/DownloadManager/: AppInfo.xml  AppRun  AppletRun  DownloadManager.xml  Options.xml  dclient.py  dserve2x.py  dserve3x.py  options.py
Apps/Elm/: AppInfo.xml  AppRun  AppletRun  SendFile.py  doSendFile  support.py
Apps/FLV2MP3/: test.py
Apps/Fetch/: AppInfo.xml  AppRun  Fetch-mimeinfo.xml  Fetch.xml  Options.xml  Templates.glade  dclient.py  fetch.py  options.py  passwords.py
Apps/Floppy/: AppIcon.xpm  AppInfo.xml  AppMenu  AppRun
Apps/Fortune/: AppRun
Apps/Free/: AppIcon.xpm  AppRun
Apps/FreeFS/: AppIcon.xpm  AppInfo.xml  AppRun  AppletRun  FreeFS-src.xml  FreeFS.xml  Options.xml  choice_install  rox_run
Apps/FreeFS/src/: .cvsignore  Makefile.in  aclocal.m4  build-0compile  config.h.in  configure  configure.in  dist  freefs.c
Apps/FreeFS/src/po/: en.po  es.po  make-mo
Apps/GZip/: AppIcon.xpm  AppRun
Apps/ImageMap/: .DirIcon  AppInfo.xml  AppRun
Apps/ImageViewer/: .DirIcon  .cvsignore  AppInfo.xml  AppRun
Apps/Launch/: AppInfo.xml  AppRun  Launch.xml  Options.xml  config.py  helper.py
Apps/Load/: AppIcon.xpm  AppInfo.xml  AppRun  AppletRun  Load.xml  Options.xml  libdir
Apps/Load/src/: .cvsignore  Makefile.in  config.h.in  configure  configure.in  infowin.c  infowin.h  load.c
Apps/Load/src/po/: en.po  es.po  extopts.py  make-mo
Apps/M4A2MP3/: main.py
Apps/Mail/: .DirIcon  AppIcon.xpm  AppInfo.xml  AppRun  AppletRun  Checker.py  InfoWin.py  Options.xml  SendFile.py  checkwin.py  doRead.py  doSend.py  mailers.py  my_support.py  selmailer.py
Apps/MakeISO/: .DirIcon  AppInfo.xml  AppRun  main.py
Apps/Mem/: .cvsignore  AppIcon.xpm  AppInfo.xml  AppRun  AppletRun  Mem.xml  Options.xml  choice_install  gtkrc
Apps/Mem/src/: Makefile.in  aclocal.m4  config.h.in  configure  configure.in  mem.c  mem_stats.c  mem_stats.h
Apps/Mem/src/po/: en.po  es.po  make-mo
Apps/NetHack/: .cvsignore  AppIcon.xpm  AppInfo.xml  AppRun  nethack.py  setup.py
Apps/NetStat/: .DirIcon  AppInfo.xml  AppRun  AppletRun  InfoWin.py  Options.xml  Templates.glade  check.py  gui.py  linux.py  netstat.py  sockwin.py  solaris.py  usage.py  usage_daemon.py
Apps/POPFilter/: .DirIcon  AppInfo.xml  AppRun  Options.xml  POPFilter.py  killfile.py  valid.py
Apps/Printer/: .cvsignore  AppIcon.xpm  AppInfo.xml  AppMenu  AppRun
Apps/Printer/src/: .cvsignore  Makefile.in  config.h.in  configure  configure.in  global.h  printer.c  printer.h  run_task.c  run_task.h
Apps/QCad/: AppRun
Apps/ROX-Register/: AppInfo.xml  AppRun
Apps/SplitF/: AppRun  SplitF.py  choices.py  support.py
Apps/Status/: .DirIcon  AppRun  finger.py  status.py
Apps/SystemTrayN/: AppInfo.xml  AppRun  AppletRun  Options.xml  SystemTrayN-src.xml  SystemTrayN.xml  libdir
Apps/SystemTrayN/src/: Makefile.in  balloon.c  balloon.h  build-0compile  config.h.in  configure.in  i18n.c  main.c  main.h  makedist  messages.pot  rox_gettext.c  tray.c  tray.h
Apps/SystemTrayN/src/po/: dist  en.po  ru.po  update-po
Apps/Tail/: AppIcon.xpm  AppInfo.xml  AppRun  Options.xml  Tail.xml  libdir
Apps/Tail/src/: Makefile  Makefile.in  choices.c  choices.h  config.h.in  configure  configure.in  default.xpm  getVersion.xsl  infowin.c  infowin.h  support.h  tail.c
Apps/Tail/src/po/: en.po  make-mo
Apps/Thumbs/: AppInfo.xml  AppRun  do_manage  helper.py  main.py  manage.py
Apps/Timer/: AppInfo.xml  AppRun
Apps/Verity/: .DirIcon  AppInfo.xml  AppRun  Templates.glade  convert.py  create.py  iso_image.py
Apps/VideoThumbnail/: AppInfo.xml  AppRun  Options.xml  VideoThumbnail.xml  extopts.py  findrox.py  interactive.py  manage.py  mpslave.py  options.py  thumb.py  vidthumb.py
Apps/XAttr/: AppInfo.xml  AppRun  XAttr.xml  xattr.py
Apps/XEmacs/: AppIcon.xpm  AppRun
Apps/XPlanet/: AppInfo.xml  AppRun  Options.xml  XPlanet.xml
CVSROOT/: passwd
LTVU/: AppRun  templates.glade  templates.py
lib/ROX-CLib/ROX-CLib/src/: Makefile.in  choices.c  choices.h  configure.in  error.c  error.h  infowin.c  infowin.h  rox-clib.h.in  rox_run.sh
lib/ROX-CLib/src/: .cvsignore  Doxyfile  Makefile.in  ROX-CLib.pc.in  aclocal.m4  appinfo.c  appinfo.h  applet.c  applet.h  basedir.c  basedir.h  build  build-0compile  choices.c  choices.h  configure.in  dist  error.c  error.h  global.h  gtksavebox.c  gtksavebox.h  infowin.c  infowin.h  install_on_path.sh  libdir.sh  menu.c  menu.h  mime.c  mime.h  mime_handler.c  mime_handler.h  options.c  options.h  pkg.c  rox-clib.h.in  rox.c  rox.h  rox_debug.c  rox_debug.h  (+21 more)
lib/ROX-CLib/src/po/: en.po  make-mo
(+161 files in other folders)
