dnl Process this file with autoconf to produce a configure script.
AC_INIT(main.c)
AC_CONFIG_HEADER(config.h)

AC_ARG_WITH(platform,
[  --with-platform	  platform name, as detected by AppRun],
[AC_SUBST(with_platform)],
[
AC_MSG_ERROR([

Please do not run 'configure' manually - instead, run the AppRun script with
the --compile option, like this:
	$ AppFactory/AppRun --compile

Thank you.
])
])

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

dnl Checks for header files.
AC_PATH_X
AC_HEADER_STDC
AC_CHECK_HEADERS(locale.h sys/stat.h libintl.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS(setlocale fstat stat bindtextdomain gettext)

dnl Check for ROX-CLib and version
ROX_CLIB(2, 1, 4)

dnl Extract version info from AppInfo.xml
ROX_SELF_VERSION

AC_OUTPUT(Makefile)
