dnl Process this file with autoconf to produce a configure script.
AC_INIT(clock.c)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

if test -z "$GTK_CONFIG"; then
  GTK_CONFIG=gtk-config
fi
AC_SUBST(GTK_CONFIG)

if test -z "$ROX_RUN"; then
  AC_CHECK_PROG(ROX_RUN, rox_run, rox_run, "$APP_DIR/rox_run")
fi
AC_SUBST(ROX_RUN)

AC_CHECK_PROG(XML_CONFIG, xml2-config, xml2-config, false)
if test "$XML_CONFIG" != "false"; then
  AC_DEFINE(HAVE_XML)
fi

dnl Checks for header files.
AC_PATH_X
AC_HEADER_STDC
AC_CHECK_HEADERS(locale.h sys/stat.h libintl.h)

dnl Do we have gdk-pixbuf?  Provide an extra if we do.
AC_MSG_CHECKING(for gdk-pixbuf library)
if test -z "$GDK_PIXBUF_CONFIG"; then
  GDK_PIXBUF_CONFIG=gdk-pixbuf-config
fi
GDK_PIXBUF_LIBS=`$GDK_PIXBUF_CONFIG --libs`
changequote(,)dnl
if [ -n "$GDK_PIXBUF_LIBS" ]; then
  AC_MSG_RESULT(yes - use '$GDK_PIXBUF_LIBS')
  USE_GDK_PIXBUF=1
else
  AC_MSG_RESULT(no - dont bother)
  USE_GDK_PIXBUF=0
fi
changequote([,])dnl
AC_SUBST(GDK_PIXBUF_CONFIG)
AC_SUBST(GDK_PIXBUF_LIBS)
AC_DEFINE(USE_GDK_PIXBUF)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS(setlocale fstat stat bindtextdomain gettext)

dnl Is altzone defined in <time.h> ?
AC_MSG_CHECKING(for altzone)
AC_TRY_LINK(
#include <time.h>
,
int tmp; tmp=altzone;,
altzone=yes,
altzone=no
)
if test $altzone = yes; then
  AC_MSG_RESULT(yes)
  AC_DEFINE(HAVE_ALTZONE)
else
  AC_MSG_RESULT(no)
fi

dnl Extract version info from AppInfo.xml
AC_MSG_CHECKING(version information)
changequote(,)dnl
VERSION=`sed -n 's/^.*<Version>\([^<]*\)<\/Version>.*$/\1/p' ../AppInfo.xml`
changequote([,])dnl
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_MSG_RESULT(version $VERSION)

AC_OUTPUT(Makefile)
