dnl Process this file with autoconf to produce a configure script.
AC_INIT(clock.c)
AC_CONFIG_HEADER(config.h)

AC_ARG_WITH(platform,
[  --with-platform	  platform name, as detected by AppRun],
[AC_SUBST(with_platform)],
[
AC_MSG_ERROR([

Please do not run 'configure' manually - instead, run the AppRun script with
the --compile option, like this:
	$ Clock/AppRun --compile

Thank you.
])
])

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

dnl Checks for header files.
AC_PATH_X
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h locale.h sys/stat.h libintl.h)
AC_CHECK_HEADERS(apsymbols.h apbuild/apsymbols.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS(setlocale fstat stat bindtextdomain gettext)
AC_CHECK_FUNCS(getopt_long)
if test $ac_cv_func_getopt_long = no; then
  AC_CHECK_LIB(gnugetopt, getopt_long)
  AC_CHECK_FUNCS(getopt_long)
fi

dnl Check for ROX-CLib and version
dnl Assume that if we have the right ROX-CLib we also have GTK+ and libxml
ROX_CLIB_0LAUNCH(2, 1, 6)

dnl Is altzone defined in <time.h> ?
AC_MSG_CHECKING(for altzone)
AC_TRY_LINK(
#include <time.h>
,
int tmp; tmp=altzone;,
altzone=yes,
altzone=no
)
if test $altzone = yes; then
  AC_MSG_RESULT(yes)
  AC_DEFINE(HAVE_ALTZONE)
else
  AC_MSG_RESULT(no)
fi

dnl Extract version info from AppInfo.xml
ROX_SELF_VERSION

AC_OUTPUT(Makefile)
