dnl Process this file with autoconf to produce a configure script.
AC_INIT(mem.c)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

if test -z "$GTK_CONFIG"; then
  GTK_CONFIG=gtk-config
fi
AC_SUBST(GTK_CONFIG)

if test -z "$ROX_RUN"; then
  AC_CHECK_PROG(ROX_RUN, rox_run, rox_run, "$APP_DIR/rox_run")
fi
AC_SUBST(ROX_RUN)

dnl Make sure we have libgtop
changequote(,)dnl
LIBGTOP_LIBS=`echo \`libgtop-config --libs --extra-libs\``
LIBGTOP_EXTRA_LIBS=`libgtop-config --extra-libs`

AC_MSG_CHECKING(for libgtop library)
if [ -n "$LIBGTOP_LIBS" ]; then
  AC_MSG_RESULT(yes - and with new style config)
  LIBGTOP_INCS=`libgtop-config --cflags`
else
  GTOP_CONFIG=`libgtop-config --config`
  if [ -n "$GTOP_CONFIG" ]; then
    AC_MSG_RESULT(yes - using '$GTOP_CONFIG')
  else
    AC_MSG_ERROR(can't run 'libgtop-config --config' - \
    		make sure it is in your PATH)
  fi
  source "$GTOP_CONFIG"
fi
changequote([,])dnl
AC_SUBST(LIBGTOP_EXTRA_LIBS)
AC_SUBST(LIBGTOP_LIBS)
AC_SUBST(LIBGTOP_INCS)

dnl Checks for header files.
AC_PATH_X
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h libintl.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS(bindtextdomain gettext)

dnl Extract version info from AppInfo.xml
AC_MSG_CHECKING(version information)
changequote(,)dnl
VERSION=`sed -n 's/^.*<Version>\([^>]*\)<\/Version>.*$/\1/p' ../AppInfo.xml`
changequote([,])dnl
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_MSG_RESULT(version $VERSION)

AC_OUTPUT(Makefile)
