#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(SystemTray, 0.1, BUG-REPORT-ADDRESS)
AC_CONFIG_HEADER(config.h)

#GNOME_COMPILE_WARNINGS(error)


AC_ARG_WITH(platform,
[  --with-platform	  platform name, as detected by AppRun],
[AC_SUBST(with_platform)],
[
AC_MSG_ERROR([

Please do not run 'configure' manually - instead, run the AppRun script with
the --compile option, like this:
	$ SystemTray/AppRun --compile

Thank you.
])
])


# Checks for programs.
AC_PROG_CC
AC_ISC_POSIX

if test -z "$ROX_RUN"; then
    AC_CHECK_PROG(ROX_RUN, rox_run, rox_run, "$APP_DIR/rox_run")
fi
AC_SUBST(ROX_RUN)

# Checks for libraries.
PKG_CHECK_MODULES(NOTIFICATION, \
		  gtk+-2.0)
# Checks for header files.
AC_HEADER_STDC
AC_PATH_X
AC_CHECK_LIB(X11, XInternAtom)
AC_SUBST(LIBS)
AC_CHECK_HEADERS([unistd.h sys/stat.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
AC_CHECK_FUNCS(bindtextdomain gettext)
AC_CHECK_FUNCS(getopt_long)
if test $ac_cv_func_getopt_long = no; then
  AC_CHECK_LIB(gnugetopt, getopt_long)
  AC_CHECK_FUNCS(getopt_long)
fi

dnl Check for ROX-CLib and version
dnl Assume that if we have the right ROX-CLib we also have GTK+ and libxml
ROX_CLIB_0LAUNCH(2, 1, 7)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
