dnl Process this file with autoconf to produce a configure script.
AC_INIT(tail.c)
AC_CONFIG_HEADER(config.h)

AC_ARG_WITH(platform,
[  --with-platform	  platform name, as detected by AppRun],
[AC_SUBST(with_platform)],
[
AC_MSG_ERROR([

Please do not run 'configure' manually - instead, run the AppRun script with
the --compile option, like this:
	$ Tail/AppRun --compile

Thank you.
])
])

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

dnl Checks for header files.
AC_PATH_X
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/filio.h locale.h libintl.h)
AC_CHECK_HEADERS(apsymbols.h apbuild/apsymbols.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS(setlocale bindtextdomain gettext)
AC_CHECK_LIB(gnugetopt, getopt_long)
AC_CHECK_FUNCS(getopt_long)

dnl Check for ROX-CLib and version
ROX_CLIB(2, 1, 4)

dnl Extract version info from AppInfo.xml
ROX_SELF_VERSION

AC_OUTPUT(Makefile)
