dnl Process this file with autoconf to produce a configure script.
AC_INIT(pkg.c)
AC_CONFIG_HEADER(rox-clib.h)

AC_ARG_WITH(platform,
[  --with-platform	  platform name, as detected by AppRun],
[AC_SUBST(with_platform)],
[
AC_MSG_ERROR([

Please do not run 'configure' manually - instead, run the AppRun script with
the --compile option, like this:
	$ Clock/AppRun --compile

Thank you.
])
])

AC_ARG_ENABLE(shlib, 
  --enable-shlib  Build shared library (yes),
 SHLIB=$enable_val, SHLIB=yes)
AC_SUBST(SHLIB)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_LIBTOOL

if test -z "$PKG_CONFIG"; then
  PKG_CONFIG=pkg-config
fi
AC_SUBST(PKG_CONFIG)
AC_DEFINE_UNQUOTED(PKG_CONFIG, "$PKG_CONFIG")

AC_DEFINE(GTK2)
gtk2=1
GTK_CFLAGS="$PKG_CONFIG gtk+-2.0 --cflags"
GTK_LIBS="$PKG_CONFIG gtk+-2.0 --libs"

AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)
AC_DEFINE_UNQUOTED(GTK_CFLAGS, "$GTK_CFLAGS")
AC_DEFINE_UNQUOTED(GTK_LIBS, "$GTK_LIBS")

AC_CHECK_PROG(XML_CONFIG, xml2-config, xml2-config, false)
if test "$XML_CONFIG" != "false"; then
  AC_DEFINE(HAVE_XML)
  AC_DEFINE_UNQUOTED(XML_CONFIG, "$XML_CONFIG")
fi

dnl Checks for libraries.
AC_CHECK_LIB(nsl, gethostbyname)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(mkdir gethostbyname)

dnl Extract version info from AppInfo.xml
AC_MSG_CHECKING(version information)
changequote(,)dnl
ROXCLIB_VERSION=`sed -n 's/^.*<Version>\([^<]*\)<\/Version>.*$/\1/p' ../AppInfo.xml`
ROXCLIB_VERSION_NUM=`sed -n 's/^.*<Version>\([.0-9]*\).*<\/Version>.*$/\1/p' ../AppInfo.xml`
changequote([,])dnl
AC_DEFINE_UNQUOTED(ROXCLIB_VERSION, "$ROXCLIB_VERSION")
AC_SUBST(ROXCLIB_VERSION_NUM)
AC_MSG_RESULT(version $ROXCLIB_VERSION)

LIBNAME=rox-clib
AC_SUBST(LIBNAME)

AC_OUTPUT(Makefile)
